complete porject, just unfinished deployment